Fixed Page Styling and ScrollBars

--- a/source/app/top-bar/top-bar.scss
+++ b/source/app/top-bar/top-bar.scss
@@ -2,7 +2,8 @@
   height: 60px;
   width: 100%;
   font-size: 24px;
-  position: relative;
+  position: fixed;
+  z-index: 999;
   transition: background 0.8s, color 0.8s;
   display: flex;
   align-items: center;
