--- a/source/css/base.css
+++ b/source/css/base.css
@@ -25,18 +25,21 @@ body {
 }
 
 .page-wrapper{
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 60px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
+  height: 100%;
 }
+
+/*.page::-webkit-scrollbar {
+    display: none;
+}*/
 
 .page{
   position: absolute;
   width: 100%;
   height: 100%;
+  padding-right: 20px;
   transition: 0.8s ease-in;
 }
 
